--- a/src/Components/Foother/Foother.css
+++ b/src/Components/Foother/Foother.css
@@ -1,5 +1,5 @@
 .Foother{
-    background-color: rgb(85, 85, 85);
+    background-color: rgb(49, 49, 49);
     height: 20vh;
 }
 
@@ -9,18 +9,33 @@
 }
 
 .Foother_div-download-kontakt{
-    margin: 10px 20px 10px 0;
-    color:  rgb(141, 139, 139);
+    margin: 10px 0px 10px 0;
+    color:  white;
     text-decoration: none;
+    width: 20vw;
 }
 
 .Foother_div-copyright{
     margin: 10px 20px 30px 20px;
-    color:  rgb(141, 139, 139);
-    font-size: 10px
+    color:  white;
+    font-size: 12px
 }
 
 .textDecoration {
     text-decoration: none;
-    color:  rgb(141, 139, 139);
+    color:  white;
+}
+
+.textDecoration:hover{
+    color: gray;
+}
+
+.Foother__div-links{
+    width: 25px;
+    height: 25px;
+    margin: 10px 10px 0 0;
+}
+
+.Foother__div-links:hover{
+transform:scale(1.4);
 }
