--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,21 +1,21 @@
-.Foother{
+.Footer{
     background-color: rgb(49, 49, 49);
     height: 25vh;
 }
 
-.Foother_div{
+.Footer_div{
     display: flex;
     justify-content: center;
 }
 
-.Foother_div-download-kontakt{
+.Footer_div-download-kontakt{
     margin: 10px 0px 10px 0;
     color:  white;
     text-decoration: none;
     width: 20vw;
 }
 
-.Foother_div-copyright{
+.Footer_div-copyright{
     margin: 10px 20px 30px 20px;
     color:  white;
     font-size: 12px
@@ -30,12 +30,12 @@
     color: gray;
 }
 
-.Foother__div-links{
+.Footer__div-links{
     width: 25px;
     height: 25px;
     margin: 10px 10px 0 0;
 }
 
-.Foother__div-links:hover{
+.Footer__div-links:hover{
 transform:scale(1.4);
 }
